took out the negative margins - need to find a better way. trying to get the alignment of the paragraph to be correct.

--- a/mission/mission.css
+++ b/mission/mission.css
@@ -15,14 +15,13 @@ h1 {
 }
 h2 {
     letter-spacing: 3px;
-    margin-top: -15px;
     color: steelblue;
     font-size: smaller;
     font-weight: lighter;
 }
 hr {
     width: 90%;
-    margin-top: -10px;
+
 }
 #italic-text {
     font-style: italic;
@@ -31,18 +30,16 @@ p {
     margin-top: 30px;
     line-height: 1.5em;
     width: 80%;
-    margin-left: 60px; 
 }
 img {
     width: 20%;
-    margin: 50px auto -5px;
+    margin: 50px auto;
     display: block;
 }
 .list {
     list-style-type: decimal;
     line-height: 1.6em;
     width: 80%;
-    margin-left: 40px
 }
 .list li {
     margin-bottom: 12px;
